--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "Veggies First",
+  "name": "veggies-first",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ejsorum.github.io/recipe-site/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -14,8 +15,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && cp build/index.html build/404.html",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
